2006-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: don't delete objects via _conn_pool
	container content [this is secondary structure,
	objects will be deleted in the _M_c container];
	this fix sporadic crashes of server on exit.

	* libsockios: Version 1.10.1

2006-11-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: delete connect processors and
	sockstreams at exit from loop; wait loop thread in sockmgr
	dtor, it safe even after wait() call, but keep from bogus
	confuse.

	* libsockios: Version 1.10.0

2006-10-11  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: fix inconsistency with observer_run
	flag.

2006-10-10  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: user can read from socket immediate
	in Connect ctor, so check chars in buffer after ctor
	and push processing queue if available.

2006-09-25  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: introduce configuration parameters
	for connection processing---limit of threads, time interval
	to detect 'busy' thread, time interval to observe processing
	threads, time interval to detect 'idle' thread
	[ready for termination]. Implemented concurrent
	connections processing by minimal number of threads with
	guarantee that blocking in processing of some connections
	don't lead to stop other connections processing [but
	within number of limit of processsing threads; the marginal
	case may be one thread per connect; adjust number
	of processing threads, if needed]. If number of
	processing threads unlimited [i.e. too big], too many
	threads created under heavy load, and resources
	used ineffective.

2006-09-22  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: use concurrent threads pool;
	special thread [observer] control threads creation;
	connection processing thread can detect that no more
	work and go away.
	
2006-09-21  Petr Ovtchenkov  <ptr@island.corbina.net>
